2012-09-04  Peter Schueller  <ps@kr.tuwien.ac.at>

	* bootstrap-extra.sh: Downloading gringo and clasp tarballs to ship them with dlvhex source.
	* configure.ac: Unpacking and building gringo and clasp within dlvhex to make them easier to use.
	* build_potassco.sh: Likewise.
	* buildclaspgringo/Makefile.am: Likewise.
	* buildclaspgringo/gringo-clang.patch: Copying patch for gringo for clang from
	https://potassco.svn.sourceforge.net/svnroot/potassco/tags/gringo-3.0.4/patches/patch-clang.diff

2012-09-03  Peter Schueller  <ps@kr.tuwien.ac.at>

	* src/State.cpp: Added possibility to repeat evaluation.
	* src/dlvhex.cpp: Likewise.
	* examples/tests/basic.test.in: Likewise.
	* examples/tests/testrepetition.stdout: Likewise.
	* testsuite/TestPlugin.cpp: Likewise.

2012-08-16  Peter Schueller  <ps@kr.tuwien.ac.at>

	* examples/Makefile.am: fixing make distcheck

2012-08-10 Christoph Redl   <redl@kr.tuwien.ac.at>

	* WeakConstraintPlugin.h: Implement weak constraints as plugin
	(internal)
	* WeakConstraintPlugin.cpp: Likewise

2012-08-10  Peter Schueller  <ps@kr.tuwien.ac.at>

	* generator/: renamed to mlp-generator/ as this directory is only
	relevant for MLPs.
	* mlp-generator/: Likewise.

	* src/ResultContainer.cpp: Removing deprecated file.

2012-08-10  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* README: Update libclingo version.

	* AUTHORS: Add Christoph Redl.

2012-08-02 Christoph Redl   <redl@kr.tuwien.ac.at>

	* AggregatePlugin.h: Implement first version of a new (internal)
	plugin as an extension of the existing aggregate-plugin.
	It realizes possibly nested DLV aggregates
	(using the usual syntax) by a rewriting to external atoms;
	this allows for using DLV aggregates also with clasp and internal
	solver backend
	* AggregatePlugin.cpp: Likewise

2012-07-28  Stefano Germano <stefanogermano0@gmail.com>

	Acthex related infrastructure:

	* include/dlvhex2/ProgramCtx.h: PluginEnvironmentContainer that