@@ -148,11 +148,13 @@ printUsage(std::ostream &out, const char* whoAmI, bool full)
       << "                      By default, all options except \"generalize\" are enabled" << std::endl
       << "     --nongroundnogoods" << std::endl
       << "                      Automatically instantiate learned nonground nogoods" << std::endl
-      << "     --flpcheck=[explicit,ufs,ufsm,none]" << std::endl
+      << "     --flpcheck=[explicit,ufs,ufsm,aufs,aufsm,none]" << std::endl
       << "                      Sets the strategy used to check if a candidate is a subset-minimal model of the reduct" << std::endl
       << "                        explicit (default): Compute the reduct and compare its models with the candidate" << std::endl
       << "                        ufs: Use unfounded sets for minimality checking" << std::endl
       << "                        ufsm: (monolithic) Use unfounded sets for minimality checking; do not decompose the program for UFS checking" << std::endl
+      << "                        aufs: Use unfounded sets for minimality checking by exploiting assumptions" << std::endl
+      << "                        aufsm: (monolithic) Use unfounded sets for minimality checking by exploiting assumptions; do not decompose the program for UFS checking" << std::endl
       << "                        none: Disable the check" << std::endl
       << "     --ufslearn       Enable learning from UFS checks (only useful with --flpcheck=ufs)" << std::endl
       << "     --eaheuristics=[always,never]" << std::endl
@@ -1053,8 +1055,7 @@ void processOptionsPrePlugin(
 					pctx.config.setOption("UFSCheckMonolithic", 1);
 					pctx.config.setOption("UFSCheckAssumptionBased", 1);
 				}else{
-					pctx.config.setOption("FLPCheck", 0);
-					pctx.config.setOption("UFSCheck", 0);
+					throw GeneralError("Invalid FLP check option: \"" + check + "\"");
 				}
 
 				LOG(INFO,"FLP Check: " << pctx.config.getOption("FLPCheck") << "; UFS Check: " << pctx.config.getOption("UFSCheck"));
